--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,15 @@
-; top-most EditorConfig file
 root = true
 
-; Unix-style newlines
 [*]
-end_of_line = LF
-
-[*.{php,json,css,scss}]
-indent_style = space
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+indent_type = space
 indent_size = 4
 
-[*.{yml,yaml}]
-indent_style = space
+[{*.yaml,*.yml}]
 indent_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
