--- a/.github/workflows/on-commit.yml
+++ b/.github/workflows/on-commit.yml
@@ -22,12 +22,10 @@ jobs:
 
       - run: npm run build
 
-      -
-        name: Deploy to GitHub Pages
-        if: success()
-        uses: crazy-max/ghaction-github-pages@v2
+      - uses: EndBug/add-and-commit@v8
         with:
-          target_branch: gh-pages
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          add: "-f dist"
+          message: "ci: Auto commit npm build result"
+          committer_name: GitHub Actions
+          committer_email: github@rensadmiraal.nl
+          push: true
