--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@tailwindcss/typography": "^0.5.2",
         "autoprefixer": "^10.4.2",
         "postcss": "^8.4.6",
-        "tailwindcss": "^3.0.22"
+        "tailwindcss": "^3.0.22",
+        "vite-plugin-handlebars": "^1.6.0"
     }
 }
